--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <title>aqui esta el titulo de la pagina desde vsc</title>
+    <p>Esto es un parrafo editado desde Git Hub </p>
 </body>
 </html>
