Se incluye parrafo desde VSC

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <title>aqui esta el titulo de la pagina desde vsc</title>
     <p>Esto es un parrafo editado desde Git Hub </p>
+    <p>Esto es un parrafo editado desde Git VSC </p>
 </body>
 </html>
